--- a/scss/styles.css
+++ b/scss/styles.css
@@ -81,7 +81,7 @@ text-align: center;
     background-color: aliceblue;
     border-radius: 10px;
 }
-.infojakob{
+.infojakov{
     background-color: aliceblue;
     border-radius: 10px;
 }
