--- a/scss/_frey.scss
+++ b/scss/_frey.scss
@@ -7,6 +7,27 @@ body{
     width: 10vw;
     border-radius: 150px;
 }
+.logo:hover{
+    animation: vibrate 0.5s infinite;
+}
+@keyframes vibrate{
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(10px);
+    }
+    50%{
+        transform: translateX(0);
+    }
+    75%{
+        transform: translateX(10px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
 .frey{
     height: 20vh;
     width: 10vw;
