--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,13 @@
 
 body{
-    background-color: rgb(172, 252, 225);
+    background-image: linear-gradient(
+        rgb(21, 68, 211),
+        rgb(72, 216, 226)
+    );
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
     min-height: 100vh;
 }
 
@@ -13,6 +20,26 @@ text-align: center;
     height: 20vh;
     width: 10vw;
     border-radius: 150px;
+}
+.logo:hover{
+    animation: vibrate 0.5s infinite;
+}
+@keyframes vibrate{
+    0%{
+        transform: translateX(0px);
+    }
+    25%{
+        transform: translateX(10px);
+    }
+    50%{
+        transform: translateX(0px);
+    }
+    75%{
+        transform: translateX(10px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
 }
 .frey{
     height: 20vh;
