--- a/scss/_casa.scss
+++ b/scss/_casa.scss
@@ -62,21 +62,20 @@ body{
     border-radius: 10px;
 }
 .imagenes-casa{
-    grid-template-areas: 
-    "a1 a1 b1 b1"
-    "c1 c1 d1 d1"
-    "e1 e1 f1 f1"
-    "g1 g1 h1 h1";
-        justify-items: center;
-        align-items: center;
-        margin: auto;
-        object-fit: cover;
-        width: 100%;
-        position: relative;
-        padding: 0 0 0 0 ;
-        @include mobile{
-        padding: 2px;
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+width: 95%;
+margin: auto;
+grid-gap: 10px;
+padding: 40px 0;
+overflow: hidden;
 }
+.imagenes-casa img{
+    width: 100%;
+    vertical-align: top;
+    height: 300px;
+    object-fit: cover;
+    transition: transform 0.5s;
 }
 .a1{
     grid-area: a1;
